--- a/fitgenius/package.json
+++ b/fitgenius/package.json
@@ -10,10 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.114.4",
+    "@react-three/fiber": "^8.17.10",
     "antd": "^5.21.4",
+    "framer-motion": "^11.11.9",
+    "gsap": "^3.12.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "three": "^0.169.0",
+    "three-mesh-bvh": "^0.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
