--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,12 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+#Dependency directories
+node_modules/
+dist/
+dist-ssr/
+
+# Local environment and other
 *.local
 
 # Editor directories and files
